styling + font changes

--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -4,20 +4,23 @@
 @import url(theme.light.css) (prefers-color-scheme: light);
 @import url(theme.dark.css) (prefers-color-scheme: dark);
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .app {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  background-color: var(--md-ref-palette-secondary95);
   height: 100%;
   width: 100%;
   color: var(--md-sys-color-on-secondary-container);
+  font-family: 'Raleway', sans-serif;
 }
 
 /* NAV BAR */
 
 nav {
-  background-color: var(--md-sys-color-primary);
+  background-color: var(--md-ref-palette-primary60);
   margin: 1rem;
   padding: 0.5rem;
   width: 95vw;
@@ -27,6 +30,7 @@ nav {
   list-style: none;
   display: flex;
   flex-direction: row;
+  font-weight: bold;
 }
 
 .nav-link-container {
@@ -38,12 +42,12 @@ nav {
 nav a {
   text-decoration: none;
   padding: 1rem;
-  transition: background-color 0.4s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
   color: var(--md-sys-color-on-primary);
 }
 
 nav a:hover {
-  background-color: var(--md-sys-color-primary-container);
+  background-color: var(--md-ref-palette-primary40);
 }
 
 /* FOOTER */
@@ -52,14 +56,36 @@ nav a:hover {
   display: flex;
   justify-content: center;
   padding: 1rem;
+  padding-bottom: 0;
+  font-weight: bold;
+}
+
+.contact-link {
+  text-decoration: none;
+  padding: 1rem;
 }
 
 .footer {
-  background-color: var(--md-sys-color-primary);
+  background-color: var(--md-ref-palette-primary60);
   margin: 1rem;
   width: 95vw;
   padding: 1rem;
   color: var(--md-sys-color-on-primary);
+}
+
+.footer-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer a {
+  color: var(--md-sys-color-on-primary);
+}
+
+.footer a:hover {
+  background-color: var(--md-ref-palette-primary40);
 }
 
 .footer-link {
@@ -67,11 +93,19 @@ nav a:hover {
   display: flex;
   flex-direction: row;
   text-align: center;
+  align-items: center;
+  margin-left: 8rem;
+  margin-right: 8rem;
+}
+
+.linkedin {
+  text-decoration: none;
+  padding: 1rem;
 }
 
 .footer-link-container {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: row;
 }
 
 /* HOME */
@@ -93,11 +127,14 @@ button {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  font-family: 'Raleway', sans-serif;
 }
 
 button a {
   color: var(--md-sys-color-on-tertiary);
   text-decoration: none;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 button:hover {
@@ -137,6 +174,10 @@ img {
   padding: 2rem;
   margin: 3rem;
   justify-content: center;
+}
+
+.about-title {
+  font-style: italic;
 }
 
 .about-text {
