added buttons to about

--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -191,6 +191,13 @@ img {
   color: var(--md-sys-color-on-secondary-container);
 }
 
+.about-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 /* PROJECTS */
 
 .project-buttons {
@@ -249,3 +256,5 @@ img {
 .contact p {
   padding-top: 1rem;
 }
+
+/* SPECIFIC PROJECT */
