--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -308,6 +308,25 @@ button:hover .icon-arrow {
   margin-top: -1rem;
 }
 
+.scroll-cont::-webkit-scrollbar {
+  width: 1rem;
+}
+
+.scroll-cont::-webkit-scrollbar-track {
+  background-color: var(--md-sys-color-tertiary-container);
+  ;
+  border-radius: 1rem;
+}
+
+.scroll-cont::-webkit-scrollbar-thumb {
+  background-color: var(--md-sys-color-tertiary);
+  border-radius: 1rem;
+}
+
+.scroll-cont::-webkit-scrollbar-thumb:hover {
+  background-color: var(--md-sys-color-on-tertiary-container);
+}
+
 .screenshots-cont {
   display: flex;
   justify-content: center;
